<resources>
    <string name="app_name">OrgList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_all_guests">Convidados</string>
    <string name="menu_presents">Presentes</string>
    <string name="menu_expenses">Gastos</string>
    <string name="nome">Nome</string>
    <string name="presenca">Presença</string>
    <string name="ausente">Ausente</string>
    <string name="presente">Presente</string>
    <string name="salvar">salvar</string>
</resources>