<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.leoandemy.orglist.ui.guests.AllGuestsFragment"
        android:label="@string/menu_all_guests"
        tools:layout="@layout/fragment_all_guests" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.leoandemy.orglist.ui.presents.PresentsFragment"
        android:label="@string/menu_presents"
        tools:layout="@layout/fragment_presents" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.leoandemy.orglist.ui.expenses.ExpensesFragment"
        android:label="@string/menu_expenses"
        tools:layout="@layout/fragment_expenses" />
</navigation>