<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.GuestsFormActivity"
    android:padding="16dp">

    <TextView
        android:paddingTop="128dp"
        android:id="@+id/text_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/edit_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_nome"
        android:autofillHints="name"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/text_presenca"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/presenca"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/edit_nome"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <RadioGroup
        android:id="@+id/radio_group_presenca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/text_presenca"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radio_presente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/presente"/>

        <RadioButton
            android:id="@+id/radio_ausente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ausente"/>

    </RadioGroup>

    <Button
        android:id="@+id/button_salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/radio_group_presenca"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/salvar"
        android:textAllCaps="true"/>



</androidx.constraintlayout.widget.ConstraintLayout>